src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_ISO_Country_Code__c</fullName>
        <description>Formula field created to be shown on conga file.
E&amp;F CRM Project</description>
        <formula>Account.IATA_ISO_Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ISO_Country_Name__c</fullName>
        <description>E&amp;F CRM Project. To be used in a conga file</description>
        <formula>Account.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ISO Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Number__c</fullName>
        <label>Activity Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Material_Deadline__c</fullName>
        <label>Advertising Material Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_RCRM_Product_Manager_Email__c</fullName>
        <description>Email for the Alternate RCRM Product Manager</description>
        <label>Alternate RCRM Product Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_value__c</fullName>
        <description>This field represents the booking value of the contract. This is equal to the amount of the opportuntiy that created the contract and includes the value of both RCRM and non-RCRM products. Used by the RCRM project.</description>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Section__c</fullName>
        <label>Budget Section</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCF_Amount__c</fullName>
        <label>CCF Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCF_Number__c</fullName>
        <label>CCF Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Auto_Number__c</fullName>
        <displayFormat>C-{YYYY}{MM}{DD}-{00000000}</displayFormat>
        <label>Contract AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <description>This field is a text area where the contract owner can add contract-related information.</description>
        <label>Contract Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Cycle_in_months__c</fullName>
        <description>This represents the duration of the future renewal cycle. Might not be equal to the duration of the current cycle.</description>
        <label>Contract Renewal Cycle (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal__c</fullName>
        <label>Contract Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Cycle_End_Date__c</fullName>
        <description>This field represents the end date of the contract&apos;s current cycle.</description>
        <label>Current Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Cycle_Start_Date__c</fullName>
        <description>This field represents the starting date of the contract&apos;s current cycle.</description>
        <label>Current Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the opportunity that last modified the contract (either created it, or updated it for a renewal). Used in the RCRM project.</description>
        <label>Current Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dunning_Procedure__c</fullName>
        <label>Dunning Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EF01</fullName>
                </value>
                <value>
                    <fullName>EF02</fullName>
                </value>
                <value>
                    <fullName>EF03</fullName>
                </value>
                <value>
                    <fullName>0005</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                    <isActive>false</isActive>
                    <label>005</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Admin_Fee__c</fullName>
        <label>E&amp;F Admin Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EF_Allow_Billing_Agreements__c</fullName>
        <label>E&amp;F Allow Billing Agreements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Allow_Billing_Agreements</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Approver_Email__c</fullName>
        <label>E&amp;F Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EF_BSP_Periods__c</fullName>
        <label>E&amp;F BSP Periods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Billing_Currency__c</fullName>
        <label>E&amp;F Billing Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Billing_Frequency__c</fullName>
        <label>E&amp;F Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Client_SIS_Code__c</fullName>
        <formula>Account.EF_SIS_Code__c</formula>
        <label>E&amp;F Client SIS Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Client_SIS_Designator__c</fullName>
        <formula>Account.EF_SIS_Designator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F Client SIS Designator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Comments__c</fullName>
        <inlineHelpText>Use this field to store general comments regarding the record update you are performing.</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_DT_Specialist_Email__c</fullName>
        <formula>EF_DT_Specialist__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F DT Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_DT_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Data Transformation Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts_DT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Data_Currency__c</fullName>
        <label>E&amp;F Data Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Group_Code__c</fullName>
        <label>E&amp;F Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_History__c</fullName>
        <description>Concatenates E&amp;F related Case or Contact linking and Comments into a read-only field.</description>
        <label>History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EF_IA_Specialist_Email__c</fullName>
        <formula>EF_IA_Specialist__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F IA Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_IA_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Invoicing &amp; Accounting Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts_IA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_ICH_Period__c</fullName>
        <label>E&amp;F ICH Period</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Manager_Approval__c</fullName>
        <description>Helper field for &quot;require approval&quot; functionality.</description>
        <label>E&amp;F Manager Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Payment_Currency__c</fullName>
        <label>E&amp;F Payment Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Payment_Terms_Code__c</fullName>
        <formula>IF(
	ISPICKVAL(EF_Payment_Terms__c, &apos;Payable immediately due net&apos;), &apos;0001&apos;,
	IF(
		ISPICKVAL(EF_Payment_Terms__c, &apos;30 days after invoice date&apos;), &apos;0011&apos;,
		IF(
			ISPICKVAL(EF_Payment_Terms__c, &apos;10 days after invoice date&apos;), &apos;0012&apos;,
			IF(
				ISPICKVAL(EF_Payment_Terms__c, &apos;15 days after invoice date&apos;), &apos;0013&apos;,
				IF(
					ISPICKVAL(EF_Payment_Terms__c, &apos;20 days after invoice date&apos;), &apos;0018&apos;,
					IF(
						ISPICKVAL(EF_Payment_Terms__c, &apos;07 days after invoice date&apos;), &apos;Z007&apos;,
						&apos;&apos;
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F Payment Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Payment_Terms__c</fullName>
        <label>E&amp;F Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Payment_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Reporting_Frequency__c</fullName>
        <label>E&amp;F Reporting Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Reporting_Level__c</fullName>
        <label>E&amp;F Reporting Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Sub Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Requested_Changes__c</fullName>
        <label>E&amp;F Requested Changes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EF_Require_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field that gets set to TRUE if one of the Billing Agreements &quot;require approval&quot; fields gets changed.</description>
        <label>E&amp;F Require Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EF_SIS_Aggregator__c</fullName>
        <label>E&amp;F SIS Aggregator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Send_to_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for &quot;require approval&quot; functionality.</description>
        <label>Send to SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EF_Status__c</fullName>
        <description>Status for E&amp;F. will be changed automatically when an account is inactivated for E&amp;F, and can be changed manually too.</description>
        <label>E&amp;F Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Submitter_Email__c</fullName>
        <label>E&amp;F_Submitter_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EF_Trading_Partner__c</fullName>
        <label>E&amp;F Trading Partner</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Contract_Share__c</fullName>
        <formula>IF(ISPICKVAL(Third_Party__c,&quot;Flight Scape&quot;), 0.75, 
IF(ISPICKVAL(Third_Party__c, &quot;Accomodations Plus International&quot;), 0.5, 
IF(ISPICKVAL(Third_Party__c, &quot;Airports Council International&quot;), 0.25,
IF(ISPICKVAL(Third_Party__c, &quot;Berlitz&quot;), 0.10,
1))))</formula>
        <label>IATA Contract Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IATA_Contract_Value__c</fullName>
        <formula>CCF_Amount__c  *  IATA_Contract_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsMine__c</fullName>
        <description>Used for filtering purposes in list views, for the RCRM project. Field is TRUE if the contract &quot;is linked&quot; to the current user, FALSE otherwise. This returns true if the user is either the owner or the RCRM Product Manager of the contract.</description>
        <formula>AND (
  RecordType.DeveloperName = &apos;RCRM_Contract&apos;,
  OR (
    $User.Id = OwnerId ,
    $User.Id = RCRM_Product_Manager__c 
  )
)</formula>
        <label>IsMine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <description>Helper field for &quot;require approval&quot; functionality.</description>
        <label>E&amp;F Manager Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_times_renewed__c</fullName>
        <description>Used by the RCRM project to count the number of times a contract has been renewed. For new contracts, this field has a value of 0.</description>
        <label>Number of times renewed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_OwnerEmail__c</fullName>
        <description>Get the email from the current opportunity owner.</description>
        <label>Opportunity OwnerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Payment</fullName>
                </value>
                <value>
                    <fullName>Clearing House</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <description>Used only for Advertising contracts (Insertion Orders). Describes the placement of the Ad in the publication.</description>
        <label>Placement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_one__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of one</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Used by the RCRM project to store info on the product family that is being sold through the contract.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <description>Only used for Advertising contracts (Insertion Orders). Name of the publication in which the advertisement will be placed.</description>
        <label>Publication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCRM_Product_Manager_Email_Formula__c</fullName>
        <formula>Current_Opportunity__r.RCRM_Product_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCRM Product Manager Email_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCRM_Product_Manager_Email__c</fullName>
        <description>Email for the RCRM Product Manager</description>
        <label>RCRM Product Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RCRM_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the RCRM project. Represents the product manager for the RCRM products being sold through the contract. Used to set the visibility on the contract control buttons (renewal, cancellation).</description>
        <label>RCRM Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the customer, taken from the ISO Country field on the customer account. Used by the RCRM project.</description>
        <formula>TEXT( Account.IATA_ISO_Country__r.Region__c )</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewed as-is</fullName>
                </value>
                <value>
                    <fullName>Replaced by a new contract</fullName>
                </value>
                <value>
                    <fullName>Not renewed</fullName>
                </value>
                <value>
                    <fullName>Renewal process started</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Replaces a previous contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_under_Sales_Responsibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether it is the Sales Manager or the Product Manager who will handle the renewal of the contract. Used by the RCRM project.</description>
        <label>Renewal under Sales Responsibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replaces_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the old contract that this contract record is replacing. Used for the RCRM project.</description>
        <label>Replaces Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Replaced by Contract</relationshipLabel>
        <relationshipName>Replaced_by_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Changes__c</fullName>
        <label>E&amp;F Requested Changes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <description>Stores the contract number assigned by the SAP platform. Used by the RCRM project.</description>
        <label>SAP Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Reservation_Deadline__c</fullName>
        <label>Space Reservation Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_formula__c</fullName>
        <description>Used to display a dynamically calculated status: &quot;Expired&quot; status for contracts after their End Date has passed, &quot;Canceled&quot; for canceled contracts or the value of the standard Status field otherwise.</description>
        <formula>IF (
  ISPICKVAL( Renewal_Status__c, &apos;Canceled&apos;),
  &apos;Canceled&apos;,
  IF (
    AND (
      NOT ( ISBLANK ( Current_Cycle_End_Date__c ) ),
      Current_Cycle_End_Date__c &lt; TODAY()
    ),
    &apos;Expired&apos;,
    TEXT( Status)
  )
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Involvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Third_Party_Involved__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Flight Scape</fullName>
                </value>
                <value>
                    <fullName>Airports Council International</fullName>
                </value>
                <value>
                    <fullName>Berlitz</fullName>
                </value>
                <value>
                    <fullName>Accomodations Plus International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CorporateServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CorporateServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CorporateServices</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CorporateServices</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>E_F_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>EF_Status__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>EF_Client_SIS_Designator__c</columns>
        <columns>EF_Client_SIS_Code__c</columns>
        <columns>EF_Group_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.EF_Client_Agreement</value>
        </filters>
        <label>E&amp;F Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>IDFSEFServices</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>RCRM_Contracts_under_My_Supervision</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Product_Family__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Renewal_Status__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.RCRM_Contract</value>
        </filters>
        <filters>
            <field>IsMine__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>RCRM Contracts under My Supervision</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>StrategicPartnershipContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Budget_Section__c</field>
            <operation>contains</operation>
            <value>368</value>
        </filters>
        <label>Strategic Partnership Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSStrategicPartnerships</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Advertising_Order_Insertion</fullName>
        <active>false</active>
        <description>Record Type to track IO&apos;s for the Advertising LOB in MACS</description>
        <label>Advertising Order Insertion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Amsterdam_Publications</fullName>
        <active>true</active>
        <description>For records migrated and synchronized with Amsterdam Publications system.</description>
        <label>Amsterdam Publications</label>
    </recordTypes>
    <recordTypes>
        <fullName>EF_Client_Agreement</fullName>
        <active>true</active>
        <label>E&amp;F Client Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>MACS_General</fullName>
        <active>true</active>
        <description>Used for all LOBs except Advertising</description>
        <label>MACS - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Master Record Type</description>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCRM_Contract</fullName>
        <active>true</active>
        <description>Used for products from the scope of the RCRM project</description>
        <label>RCRM Contract</label>
    </recordTypes>
</CustomObject>